Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp
@@ -356,14 +356,13 @@ template <> void derefGPtr<GstQuery>(GstQuery* ptr)
 #if GST_CHECK_VERSION(1, 10, 0)
 template <> GRefPtr<GstStream> adoptGRef(GstStream* ptr)
 {
-    ASSERT(!ptr || !g_object_is_floating(ptr));
     return GRefPtr<GstStream>(ptr, GRefPtrAdopt);
 }
 
 template <> GstStream* refGPtr<GstStream>(GstStream* ptr)
 {
     if (ptr)
-        gst_object_ref_sink(GST_OBJECT_CAST(ptr));
+        gst_object_ref(GST_OBJECT_CAST(ptr));
 
     return ptr;
 }
@@ -376,14 +375,13 @@ template <> void derefGPtr<GstStream>(GstStream* ptr)
 
 template <> GRefPtr<GstStreamCollection> adoptGRef(GstStreamCollection* ptr)
 {
-    ASSERT(!ptr || !g_object_is_floating(ptr));
     return GRefPtr<GstStreamCollection>(ptr, GRefPtrAdopt);
 }
 
 template <> GstStreamCollection* refGPtr<GstStreamCollection>(GstStreamCollection* ptr)
 {
     if (ptr)
-        gst_object_ref_sink(GST_OBJECT_CAST(ptr));
+        gst_object_ref(GST_OBJECT_CAST(ptr));
 
     return ptr;
 }
